--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,13 @@
 
 :root {
   --text-font-family: "La Belle Aurore", cursive;
+  --text-font-color: #515152;
 }
 
 body {
   font-family: "ROBOTO", sans-serif;
+  margin: 0;
+  border: border-box;
 }
 
 .text {
@@ -91,8 +94,8 @@ body {
   top: 52vh;
 }
 
-.nav,
-.slider {
+.slider,
+.nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -113,8 +116,8 @@ body {
   padding: 0 2em;
 }
 
-.nav h1,
-.slider h1 {
+.slider h1,
+.nav h1 {
   font-family: "Josefin Sans", sans-serif;
   font-size: 5vw;
   margin: 0;
@@ -246,6 +249,257 @@ svg {
   z-index: auto;
 }
 
+div.work-grid {
+  display: -ms-grid;
+  display: grid;
+  height: 100vh;
+  -ms-grid-columns: 0.5fr 1.5fr 1.5fr 1fr;
+      grid-template-columns: 0.5fr 1.5fr 1.5fr 1fr;
+  -ms-grid-rows: 1.3fr 2fr 0.7fr;
+      grid-template-rows: 1.3fr 2fr 0.7fr;
+  grid-gap: 0 25px;
+      grid-template-areas: "h1 h2 h2 h2" "h1 h3 h4 h5" "h1 h6 h7 h8";
+}
+
+.post-image:first-child {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 1;
+  grid-area: h1;
+}
+
+.post-item:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 3;
+  grid-area: h2;
+  max-height: 500px;
+  overflow: hidden;
+}
+
+.post-item:nth-child(3) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: h3;
+}
+
+.post-item:nth-child(4) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 3;
+  grid-area: h4;
+}
+
+.post-item:nth-child(5) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 4;
+  grid-area: h5;
+  background-color: #08ccb8;
+  font-size: 3em;
+  font-family: var(--text-font-family);
+  color: var(--text-font-color);
+  width: 100%;
+}
+
+.post-item:nth-child(6) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
+  grid-area: h6;
+}
+
+.post-item:nth-child(7) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 3;
+  grid-area: h7;
+}
+
+.post-item:nth-child(8) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 4;
+  grid-area: h8;
+}
+
+.post-image {
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.post-content {
+  font-weight: 300;
+  padding: 25px;
+  width: 100%;
+  height: 100%;
+}
+
+.work-grid--text {
+  width: 100%;
+}
+
+.post-item h1 {
+  display: inherit;
+  position: relative;
+  top: 21vh;
+  left: 10vw;
+}
+
+.post-item h2 {
+  display: inherit;
+  position: absolute;
+  margin-left: 1vw;
+  top: -3vh;
+}
+
+.post-item.a-link1,
+.post-item.a-link2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-position: center;
+}
+
+.post-item.a-link1::before,
+.post-item.a-link2::before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-radius: 50%;
+  background-color: #fff;
+  position: absolute;
+  z-index: 1;
+}
+
+.post-item.a-link1::after,
+.post-item.a-link2::after {
+  content: "View project";
+  position: absolute;
+  text-align: center;
+  font-size: 0;
+  z-index: 2;
+  font-family: var(--text-font-family);
+  color: #03dac6;
+}
+
+a.post-item.a-link1:hover::after,
+a.post-item.a-link2:hover::after {
+  -webkit-animation: zoom-text 0.5s ease forwards;
+          animation: zoom-text 0.5s ease forwards;
+}
+
+@-webkit-keyframes zoom-text {
+  from {
+    -webkit-transform: scale(0%);
+            transform: scale(0%);
+    font-size: 1;
+  }
+  to {
+    -webkit-transform: scale 100%;
+            transform: scale 100%;
+    font-size: 50px;
+  }
+}
+
+@keyframes zoom-text {
+  from {
+    -webkit-transform: scale(0%);
+            transform: scale(0%);
+    font-size: 1;
+  }
+  to {
+    -webkit-transform: scale 100%;
+            transform: scale 100%;
+    font-size: 50px;
+  }
+}
+
+.visible {
+  -webkit-filter: grayscale(90%) blur(3px);
+          filter: grayscale(90%) blur(3px);
+}
+
+a.post-item.a-link1:hover::before,
+a.a-link2:hover::before {
+  -webkit-animation: loading1 0.3s ease forwards;
+          animation: loading1 0.3s ease forwards;
+}
+
+@-webkit-keyframes loading1 {
+  0% {
+    width: 0px;
+    height: 0px;
+  }
+  100% {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+@keyframes loading1 {
+  0% {
+    width: 0px;
+    height: 0px;
+  }
+  100% {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+a.post-item.a-link1:hover,
+a.post-item.a-link2:hover {
+  -webkit-filter: grayscale(0%) blur(0px);
+          filter: grayscale(0%) blur(0px);
+  -webkit-animation: skew 0.5s ease forwards;
+          animation: skew 0.5s ease forwards;
+  z-index: 3;
+}
+
+@-webkit-keyframes skew {
+  from {
+    -webkit-transform: scale(100%);
+            transform: scale(100%);
+  }
+  to {
+    -webkit-transform: scale(110%);
+            transform: scale(110%);
+  }
+}
+
+@keyframes skew {
+  from {
+    -webkit-transform: scale(100%);
+            transform: scale(100%);
+  }
+  to {
+    -webkit-transform: scale(110%);
+            transform: scale(110%);
+  }
+}
+
+.hidden {
+  display: none;
+}
+
+#hiddenContainer {
+  z-index: 99;
+  width: 40vw;
+  height: 80vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: #fff;
+  display: none;
+}
+
 @media (min-width: 800px) {
   .nav h1,
   .slider h1 {
@@ -263,10 +517,10 @@ svg {
     width: 140px;
   }
   section.nav {
-    padding-left: 13em;
+    margin-left: 13em;
   }
   main {
-    padding-left: 13em;
+    margin-left: 13em;
   }
 }
 
@@ -276,10 +530,10 @@ svg {
     top: -45px;
   }
   section.nav {
-    padding-left: 5em;
+    margin-left: 5em;
   }
   main {
-    padding-left: 5em;
+    margin-left: 5em;
   }
 }
 
@@ -311,7 +565,7 @@ svg {
     margin-left: 3.5em;
   }
   main {
-    padding-left: 3.5em;
+    margin-left: 3.5em;
   }
 }
 
