alert of getSrcId changed

--- a/css/main.css
+++ b/css/main.css
@@ -213,10 +213,19 @@ svg {
 
 .nav-tab {
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #03dac6;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
-  font-size: 2vw;
+  font-size: 20px;
   border-bottom: 1px solid #282828;
   background-color: transparent;
   font-family: "Open Sans", sans-serif;
@@ -340,8 +349,12 @@ div.work-grid {
 .post-item h1 {
   display: inherit;
   position: relative;
-  top: 21vh;
+  top: 20vh;
   left: 10vw;
+}
+
+.post-item h1:hover {
+  color: #1e1f26;
 }
 
 .post-item h2 {
@@ -374,6 +387,7 @@ div.work-grid {
   background-color: #fff;
   position: absolute;
   z-index: 1;
+  display: inherit;
 }
 
 .post-item.a-link1::after,
@@ -385,6 +399,7 @@ div.work-grid {
   z-index: 2;
   font-family: var(--text-font-family);
   color: #03dac6;
+  display: inherit;
 }
 
 a.post-item.a-link1:hover::after,
@@ -498,6 +513,29 @@ a.post-item.a-link2:hover {
           transform: translate(-50%, -50%);
   background-color: #fff;
   display: none;
+}
+
+@media (max-width: 1080px) {
+  @-webkit-keyframes loading1 {
+    0% {
+      width: 0px;
+      height: 0px;
+    }
+    100% {
+      width: 250px;
+      height: 250px;
+    }
+  }
+  @keyframes loading1 {
+    0% {
+      width: 0px;
+      height: 0px;
+    }
+    100% {
+      width: 250px;
+      height: 250px;
+    }
+  }
 }
 
 @media (min-width: 800px) {
