update 2nd-index style

--- a/css/main.scss
+++ b/css/main.scss
@@ -384,6 +384,7 @@ a.post-item.a-link2:hover {
   transform: translate(-50%, -50%);
   background-color: #fff;
   display: none;
+  // padding: 10px;
 }
 
 // button {
