--- a/style.css
+++ b/style.css
@@ -1,25 +1,52 @@
+:root {
+  --text-font-family: "La Belle Aurore", cursive;
+}
 .hidden {
   display: none;
 }
 body {
-  height: 400px;
-  width: 500px;
+  height: 600px;
+  width: 1000px;
   margin: 0 auto;
   background-color: #515152;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 img {
   position: absolute;
   top: 0;
   left: 0;
   z-index: -3;
-  display: flex;
   width: 100vw;
   height: 100vh;
 }
 
 .container {
+  top: 25%;
+  left: 50%;
+  color: rgb(0, 0, 0);
+  font-size: 50px;
+  font-family: var(--text-font-family);
+}
+#weather {
   position: absolute;
-  font-size: 30px;
-  color: rgb(246, 2, 2);
-  font-size: 35px;
+  top: 20%;
+  left: 35%;
+}
+#quote {
+  position: absolute;
+  width: 22ch;
+  margin-top: 17%;
+  margin-left: -8%;
+}
+#clock {
+  position: absolute;
+  top: 0%;
+}
+a {
+  position: absolute;
+  top: 65%;
+  left: 40%;
 }
