--- a/style.css
+++ b/style.css
@@ -8,10 +8,28 @@ body {
   height: 600px;
   width: 800px;
   margin: 0 auto;
+  padding: 0;
   background-color: #515152;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  overflow: hidden;
+}
+form {
+  position: relative;
+  top: 7%;
+  left: 40%;
+  line-height: 15px;
+}
+#todo-list {
+  position: absolute;
+  left: 20%;
+  top: 71%;
+  overflow: hidden;
+  width: 50%;
+  text-overflow: ellipsis;
+  line-height: 22px;
+}
+#todo-list:hover {
+  overflow: visible;
 }
 img {
   position: absolute;
@@ -21,17 +39,26 @@ img {
   width: 100vw;
   height: 100vh;
 }
+#greeting {
+  font-size: 35px;
+  position: absolute;
+  top: 10%;
+  left: 33%;
+}
 
 .container {
   top: 25%;
   left: 50%;
   color: rgb(0, 0, 0);
-  font-size: 50px;
+  font-size: 25px;
   font-family: var(--text-font-family);
 }
 #clock {
   position: absolute;
-  top: -1vh;
+  top: 0;
+  margin-top: 0;
+  left: 35%;
+  font-size: 30px;
 }
 #weather {
   position: absolute;
@@ -40,12 +67,13 @@ img {
 }
 #quote {
   position: absolute;
-  width: 22ch;
-  margin-top: 15vh;
-  margin-left: -8vw;
+  width: 25ch;
+  top: 45%;
+  left: 35%;
+  font-size: 20px;
 }
 a {
   position: absolute;
-  top: 65vh;
+  top: 66vh;
   left: 40vw;
 }
