style.css update reponsive

--- a/css/main.scss
+++ b/css/main.scss
@@ -241,10 +241,9 @@ div.work-grid {
 .post-item:nth-child(5) {
   grid-area: h5;
   background-color: #08ccb8;
-  font-size: 3em;
+  font-size: 2vw;
   font-family: var(--text-font-family);
   color: var(--text-font-color);
-  width: 100%;
 }
 
 .post-item:nth-child(6) {
@@ -445,6 +444,8 @@ a.post-item.a-link2:hover {
   main {
     margin-left: 13em;
   }
+}
+@media only screen and (min-width: 1440px) {
 }
 @media (max-width: 800px) {
   svg {
