--- a/css/main.css
+++ b/css/main.css
@@ -303,10 +303,9 @@ div.work-grid {
   -ms-grid-column: 4;
   grid-area: h5;
   background-color: #08ccb8;
-  font-size: 3em;
+  font-size: 2vw;
   font-family: var(--text-font-family);
   color: var(--text-font-color);
-  width: 100%;
 }
 
 .post-item:nth-child(6) {
